manifests/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    kong-cicd-demo/tier: platform
