manifests/platform/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kong-cp-to-httpbin
  namespace: kong
spec:
  from:
  - group: configuration.konghq.com
    kind: KongConsumer
    namespace: httpbin
  to:
  - group: konnect.konghq.com
    kind: KonnectGatewayControlPlane
